--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,9 +1,11 @@
+@import '../../base.scss';
+
 .page {
     max-width: 100vw;
     margin: 0 auto;
     font-family:  "JetBrainsMono", "Arial ", sans-serif;
-    color: #F2F2F3;
-    background-color: #E5E5E5;
+    color: $text-color;
+    background-color: $background-color;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
