--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -3,7 +3,7 @@
 .page {
     max-width: 100vw;
     margin: 0 auto;
-    font-family:  "JetBrainsMono", "Arial ", sans-serif;
+    font-family:  "Roboto", "Arial ", sans-serif;
     color: $text-color;
     background-color: $background-color;
     -moz-osx-font-smoothing: grayscale;
