--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url(./vendor/normalize.css);
+@import './vendor/normalize.scss';
 
 /*Подключаем fonts*/
-@import url(./fonts/fonts.css);
+@import './fonts/fonts.scss';
