--- a/src/base.scss
+++ b/src/base.scss
@@ -42,3 +42,24 @@ $gray: #C6C6C6;
     padding: 0 20px 50px;
     margin: 0;
 }
+
+@mixin subtitle {
+    font-size:22px;
+    line-height: 32px;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 24px;
+}
+
+@mixin text {
+    font-size:16px;
+    line-height: 22px;
+    font-weight: 300;
+    color: $text-color;
+    text-align: left;
+    margin: 0 0 16px;
+
+    &:last-child{
+        margin: 0;
+    } 
+}
