--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -12,7 +12,7 @@
     width: 100%;
     list-style: none;
     display: flex;
-    padding: 0;
+    padding: 0 0 30px;
     margin: 0;
     gap: 32px;
 }
