--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,14 +1,13 @@
 @import '../../base.scss';
 
 .header {
-    max-width: 1920px;
     width: 100%;
     height: 100px;
     background-color: $background-color;
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 1px 8px rgba($text-color, .5);
+    box-shadow: 0px 1px 8px rgba($gray, .5);
 }
 
 .box{
@@ -42,8 +41,14 @@
     transition: 0.3s;
     position: relative;
 
+    &:hover{
+        color: $gray;
+        transition: 1s;
+        cursor: pointer;
+    }
+
     &::before{
-        background-color: $text-color;
+        background-color: $gray;
         position: absolute;
         content: '';
         bottom: 0;
