--- a/src/components/Price/Price.module.scss
+++ b/src/components/Price/Price.module.scss
@@ -8,8 +8,41 @@
     @include title;
 }
 
+.box {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.header {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid $text-color;
+    padding: 20px;
+}
+
+.text {
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 400;
+    margin: 0;
+}
+
 @media(max-width: 768px){
     .title{
         @include title-min
+    }
+
+    .header {
+        padding: 10px;
+    }
+    
+    .text {
+        font-size: 14px;
+        line-height: 18px;
     }
 }
