--- a/src/base.scss
+++ b/src/base.scss
@@ -3,10 +3,13 @@ $background-color: #FFF;
 $text-color:#363431;
 $green: #74B900;
 $green-light: #C7DF9E;
+$turquoise:#E2F0CA;
 $white: #FFF;
 $white-dark: #F3F3F3;
 $gray: #C6C6C6;
 $copyright: #828282;
+$pink: #F58CA1;
+$traning: #5B5B5B;
 
 
 @mixin main-column {
