--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,7 +1,9 @@
 @import '../../base.scss';
 
 .page {
+    box-sizing: border-box;
     max-width: 100vw;
+    width: 100%;
     margin: 0 auto;
     font-family:  "Roboto", "Arial ", sans-serif;
     color: $text-color;
