--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,13 +1,22 @@
 @import '../../base.scss';
 
 .footer {
+    box-sizing: border-box;
     width: 100%;
     background-color: $background-color;
+    box-shadow: 0px -2px 8px rgba($gray, .5);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px 0;
-    box-shadow: 0px -2px 8px rgba($gray, .5);
+}
+
+.container {
+    max-width: 1280px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .box {
@@ -83,6 +92,7 @@
 }
 
 .box_we {
+    box-sizing: border-box;
     max-width: 380px;
     width: 100%;
     display: flex;
@@ -116,6 +126,61 @@
     line-height: 16px;
     font-weight: 400;
     margin: 20px 0 0 20px;
+}
+
+.form {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.input {
+    box-sizing: border-box;
+    width: 100%;
+    height: 48px;
+    background-color: $white-dark;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 400;
+    color: $green;
+    padding: 0 10px;
+}
+
+.wrong {
+    color: #EE3465;
+}
+
+.input_error{
+    width: 100%;
+    text-align: left;
+    margin-top: 5px;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #EE3465;
+    text-align: center;
+}
+
+.button {
+    font-size: 16px;
+    line-height: 27px;
+    font-weight: 400;
+    width: 104px;
+    height: 48px;
+    background-color: $green;
+    color: $white;
+    border: none;
+    padding: 0;
+}
+
+.button_disabled {
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 @media (max-width: 768px) {
