--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,6 +1,7 @@
 @import '../../base.scss';
 
 .header {
+    box-sizing: border-box;
     width: 100%;
     height: 100px;
     background-color: $background-color;
