--- a/src/components/InitialPage/InitialPage.module.scss
+++ b/src/components/InitialPage/InitialPage.module.scss
@@ -2,7 +2,7 @@
 
 .container{
     width: 100%;
-    background-image: url(../../image//InitialPage//main.png);
+    background-image: url(../../image/InitialPage/main.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
