--- a/src/base.scss
+++ b/src/base.scss
@@ -6,6 +6,7 @@ $green-light: #C7DF9E;
 $turquoise:#E2F0CA;
 $white: #FFF;
 $white-dark: #F3F3F3;
+$lite-gray:#F9F9F9;
 $gray: #C6C6C6;
 $copyright: #828282;
 $pink: #F58CA1;
