--- a/src/components/Actions/Training.module.scss
+++ b/src/components/Actions/Training.module.scss
@@ -98,6 +98,49 @@
     margin-bottom: 30px;
 }
 
+.box_price{
+    box-sizing: border-box;
+    max-width: 800px;
+    width: 100%;
+    background-color: $pink;
+    border-radius: 16px;
+    margin: 30px 0;
+    padding: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.box_button {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.button {
+    background-color: $white;
+    color: $green;
+    width: 300px;
+    height: 60px;
+    border: none;
+    padding: 0;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    line-height: 23px;
+    font-weight: 400;
+    cursor: pointer;
+}
+
+.price_text {
+    color: $white;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 400;
+}
+
 @media(max-width: 768px){
     .title{
         @include title-min;
@@ -139,5 +182,17 @@
         width: 32px;
         height: 32px;
         margin-left: 5px;
+    }
+
+    .box_price{
+        flex-direction: column;
+        align-items: flex-start;
+        margin: 0;
+        padding: 20px;
+    }
+
+    .button {
+        width: 240px;
+        height: 50px;
     }
 }
