--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -12,6 +12,7 @@
 }
 
 .container {
+    box-sizing: border-box;
     max-width: 1280px;
     width: 100%;
     display: flex;
@@ -120,12 +121,12 @@
 }
 
 .copyright{
-    width: 100%;
+    max-width: 100%;
     color: $copyright;
     font-size: 16px;
     line-height: 16px;
     font-weight: 400;
-    margin: 20px 0 0 20px;
+    margin: 20px auto 0 20px;
 }
 
 .form {
