--- a/src/components/Price/Price.module.scss
+++ b/src/components/Price/Price.module.scss
@@ -9,6 +9,7 @@
 }
 
 .box {
+    box-sizing: border-box;
     max-width: 800px;
     width: 100%;
     display: flex;
@@ -17,11 +18,12 @@
 }
 
 .header {
+    box-sizing: border-box;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid $text-color;
+    border: 1px solid $gray;
     padding: 20px;
 }
 
@@ -30,6 +32,16 @@
     line-height: 26px;
     font-weight: 400;
     margin: 0;
+}
+
+.text_bottom {
+    max-width: 800px;
+    width: 100%;
+    text-align: left;
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 400;
+    margin: 20px 0 0;
 }
 
 @media(max-width: 768px){
@@ -42,6 +54,11 @@
     }
     
     .text {
+        font-size: 14px;
+        line-height: 18px;
+    }
+
+    .text_bottom {
         font-size: 14px;
         line-height: 18px;
     }
