--- a/src/components/SaleCard/SaleCard.module.scss
+++ b/src/components/SaleCard/SaleCard.module.scss
@@ -2,12 +2,12 @@
 
 .box {
     box-sizing: border-box;
-    max-width: 1140px;
-    width: 100%;
+    width: 1140px;
     background-color: $white;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     border-radius: 16px;
+    overflow: hidden;
 }
 
 .image {
@@ -53,10 +53,25 @@
     margin: 10px 0;
 }
 
+/*@media(max-width: 1200px){
+    .box {
+        width: 950px;
+    }
+
+}
+
+@media(max-width: 1000px){
+    .box {
+        width: 750px;
+    }
+
+}*/
+
 @media(max-width: 768px){
 
     .box {
         flex-direction: column;
+        width: 100%;
     }
 
     .box_info {
