--- a/src/components/SaleCard/SaleCard.module.scss
+++ b/src/components/SaleCard/SaleCard.module.scss
@@ -1,11 +1,13 @@
 @import '../../base.scss';
 
 .box {
+    width: 100%;
+    height: 424px;
     box-sizing: border-box;
-    width: 1140px;
     background-color: $white;
     display: inline-flex;
     align-items: center;
+    justify-content: center;
     border-radius: 16px;
     overflow: hidden;
 }
@@ -15,7 +17,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 16px;
 }
 
 .box_info {
@@ -53,35 +54,24 @@
     margin: 10px 0;
 }
 
-/*@media(max-width: 1200px){
-    .box {
-        width: 950px;
-    }
-
-}
-
-@media(max-width: 1000px){
-    .box {
-        width: 750px;
-    }
-
-}*/
 
 @media(max-width: 768px){
 
     .box {
         flex-direction: column;
-        width: 100%;
+        height: auto;
     }
 
     .box_info {
         margin: 0;
         padding: 20px;
+        height: 225px;
     }
 
     .image {
         max-width: 100%;
         margin-bottom: 20px;
+        height: 450px;
     }
 
     .title {
@@ -92,6 +82,40 @@
     .text {
         font-size: 16px;
         line-height: 17px;
+    }
+
+    .prise {
+        font-size: 20px;
+        list-style: 21px;
+    }
+}
+
+@media(max-width: 425px){
+
+    .box {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .box_info {
+        box-sizing: border-box;
+        height: 225px;
+    }
+
+    .image {
+        max-width: 100%;
+        margin-bottom: 20px;
+        height: 250px;
+    }
+
+    .title {
+        font-size: 21px;
+        line-height: 22px;
+    }
+    
+    .text {
+        font-size: 14px;
+        line-height: 15px;
     }
 
     .prise {
